2008-05-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (identify-key): Use a double buffer to
	display text.

	* src/clfswm-query.lisp (query-string): Use a double buffer to
	display text.

	* src/clfswm-info.lisp (draw-info-window): Use a double buffer to
	display text.

	* src/xlib-util.lisp (clear-pixmap-buffer, copy-pixmap-buffer):
	New functions.

2008-05-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (info-mode): Add boundaries in the info mode window.

	* src/menu-def.lisp: New file: move all menu definition in
	menu-def.lisp.

	* src/clfswm-layout.lisp (register-layout): Use a function instead
	of a macro.

2008-04-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-menu-doc,
	(produce-menu-doc-html): New functions.
	(produce-doc-*): Moved to clfswm-autodoc.lisp.

	* src/clfswm-util.lisp (paste-selection-no-clear): Prevent to
	paste a child on one of its own children. (this prevent a
	recursive bug).
	(move-child-to): Rename move/copy-current-child-by to
	move/copy-child-to.
	(mouse-move-window-over-frame): New function to move the window
	under the mouse cursor to another frame.

	* src/clfswm-internal.lisp (find-child-in-parent): New function.

2008-04-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Display unmanaged
	windows only when its window parent is the current child.

2008-04-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (manage-current-window)
	(unmanage-current-window): New functions: Allow to force to manage
	or unmanage a window by its parent frame.

	* src/bindings-second-mode.lisp (#\o): binded to
	set-open-in-new-frame-in-parent-frame-nw-hook and
	(#\o :control) to set-open-in-new-frame-in-root-frame-nw-hook

	* src/clfswm-util.lisp (with-current-window): New macro.

	* src/xlib-util.lisp (move-window, resize-window): Remove uneeded