@@ -7,7 +7,6 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-- Ensure-unique-number/name (new function) [Philippe]
 
 MAYBE
 =====
@@ -34,7 +33,7 @@ Operation:
 
 - Remote access to the clfswm REPL [Philippe]
 
-- cd/pwd a la shell to navigate throu frames. [Philippe] 
+- cd/pwd a la shell to navigate throw frames. [Philippe] 
 
 - Hide/Unhide frame [Philippe]
 
@@ -47,3 +46,5 @@ Operation:
 - A Gimp layout example [Philippe]
 
 - Hook to open next window in named/numbered frame [Philippe]
+
+- Ensure-unique-number/name (new function) [Philippe]
